# scratch_pad

./: .gitignore  .gitmodules  CMakeLists.txt  blockchain.c  blockchain.h  hcitool-sample.c  readme.md  scratch_pad.c  sha256_impl.c  sha256_impl.h  sha512_impl.c  sha512_impl.h  sha_algorithms.c  sha_algorithms.h
cert/: FullChain.cer  rsa_cert.pem  rsa_key.pem  rsa_key_rsa.pem  signer_cert.cer  x509_test_cert.pem
inc/: bt_beacon_mgr.h  bt_device_discovery.h  bt_device_mgr.h
src/: bt_beacon_mgr.c  bt_device_discovery_linux.c  bt_device_discovery_win.c  bt_device_mgr_linux.c  bt_device_mgr_win.c
